Fixed header for alternate pages, created one good portfolio template, copied it 11 times - so each portfolio item will have it's own page, just need to change a little text and one image per page

--- a/Smarty/HTML_BS4/rocket_portfolio_6.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rocket Elevators - Primus Elevator Shaft System</title>
+		<title>Rocket Elevators - Backlit Buttons</title>
 		<meta name="description" content="" />
 		<meta name="Author" content="Matthew Cote" />
 
@@ -270,8 +270,8 @@
 			<section class="page-header dark page-header-xs">
 				<div class="container">
 
-					<h1>Primus Elevator Shaft System</h1>
-					<span class="font-lato fs-18 hidden-xs-down">A modular, affordable, elevator shaft system, will support a variety of configurations.</span>
+					<h1>Executive Series</h1>
+					<span class="font-lato fs-18 hidden-xs-down">Our most luxurious elevator experience - Command Elevation/span>
 
 				</div>
 			</section>
@@ -284,7 +284,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_3.jpg" alt="">
+								<img class="img-fluid" src="logoimages\portfolio_6.jpg" alt="">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
