--- a/Smarty/HTML_BS4/rocket_portfolio_4.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rocket Elevators - Primus Elevator Shaft System</title>
+		<title>Rocket Elevators - IESC Awards</title>
 		<meta name="description" content="" />
 		<meta name="Author" content="Matthew Cote" />
 
@@ -270,8 +270,8 @@
 			<section class="page-header dark page-header-xs">
 				<div class="container">
 
-					<h1>Primus Elevator Shaft System</h1>
-					<span class="font-lato fs-18 hidden-xs-down">A modular, affordable, elevator shaft system, will support a variety of configurations.</span>
+					<h1>Standard Steel Series</h1>
+					<span class="font-lato fs-18 hidden-xs-down">The Standard Stainless Steel Series elevator was introduced first by Rocket Elevator in 1976 - We made them first, we make them best.</span>
 
 				</div>
 			</section>
@@ -284,7 +284,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_3.jpg" alt="">
+								<img class="img-fluid" src="logoimages\portfolio_4.jpg" alt="">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
