--- a/Smarty/HTML_BS4/rocket_portfolio_5.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rocket Elevators - Primus Elevator Shaft System</title>
+		<title>Rocket Elevators - MGM Grand Las Vegas</title>
 		<meta name="description" content="" />
 		<meta name="Author" content="Matthew Cote" />
 
@@ -270,8 +270,8 @@
 			<section class="page-header dark page-header-xs">
 				<div class="container">
 
-					<h1>Primus Elevator Shaft System</h1>
-					<span class="font-lato fs-18 hidden-xs-down">A modular, affordable, elevator shaft system, will support a variety of configurations.</span>
+					<h1>MGM Grand Las Vegas</h1>
+					<span class="font-lato fs-18 hidden-xs-down">Our elevators serve the largest hotel in the United States of America, the MGM Grand. Elevating guests with Speed, Safety and Style</span>
 
 				</div>
 			</section>
@@ -284,7 +284,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_3.jpg" alt="">
+								<img class="img-fluid" src="logoimages\portfolio_5.jpg" alt="">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
