Finished Portfolio section and pages

--- a/Smarty/HTML_BS4/rocket_portfolio_6.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_6.html
@@ -271,7 +271,7 @@
 				<div class="container">
 
 					<h1>Executive Series</h1>
-					<span class="font-lato fs-18 hidden-xs-down">Our most luxurious elevator experience - Command Elevation/span>
+					<span class="font-lato fs-18 hidden-xs-down">Our most luxurious elevator experience - Command Elevation</span>
 
 				</div>
 			</section>
