--- a/Smarty/HTML_BS4/rocket_portfolio_7.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rocket Elevators - Backlit Buttons</title>
+		<title>Rocket Elevators - Buttons that lock</title>
 		<meta name="description" content="" />
 		<meta name="Author" content="Matthew Cote" />
 
@@ -84,7 +84,6 @@
 
 		</div>
 		<!-- /SLIDE TOP -->
-
 
 		<!-- wrapper -->
 		<div id="wrapper">
@@ -270,8 +269,8 @@
 			<section class="page-header dark page-header-xs">
 				<div class="container">
 
-					<h1>BACKLIT BUTTONS</h1>
-					<span class="font-lato fs-18 hidden-xs-down">Best Backlit Buttons in the Business</span>
+					<h1>Buttons that lock</h1>
+					<span class="font-lato fs-18 hidden-xs-down">We have buttons that lock, they only work if you have a key!</span>
 
 				</div>
 			</section>
@@ -284,7 +283,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_2.jpg" alt="">
+								<img class="img-fluid" src="logoimages\portfolio_7.jpg" alt="">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
@@ -360,10 +359,8 @@
 		</div>
 		<!-- /wrapper -->
 
-
 		<!-- SCROLL TO TOP -->
 		<a href="#" id="toTop"></a>
-
 
 		<!-- PRELOADER -->
 		<div id="preloader">
@@ -372,13 +369,11 @@
 			</div>
 		</div><!-- /PRELOADER -->
 
-
 		<!-- JAVASCRIPT FILES -->
 		<script>var plugin_path = 'assets/plugins/';</script>
 		<script src="assets/plugins/jquery/jquery-3.3.1.min.js"></script>
 
 		<script src="assets/js/scripts.js"></script>
-		
-		
+				
 	</body>
 </html>
