--- a/Smarty/HTML_BS4/index-onepage-construction_altered2.html
+++ b/Smarty/HTML_BS4/index-onepage-construction_altered2.html
@@ -966,7 +966,7 @@
 												</a>
 
 												<!-- details -->
-												<a class="ico-rounded" href="rocket_portfolio_9.html.html">
+												<a class="ico-rounded" href="rocket_portfolio_9.html">
 													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
 												</a>
 
