Updated 16 files, services drop down header adjust.

--- a/Smarty/HTML_BS4/rocket_residential.html
+++ b/Smarty/HTML_BS4/rocket_residential.html
@@ -138,9 +138,27 @@
 										</li>
 										
 										<li><!-- SERVICES 2-->
-											<a href="index-onepage-construction_altered2.html#services">
+											<a class="dropdown-toggle" href="#services">
 												SERVICES
 											</a>
+											<ul class="dropdown-menu">
+												<li>
+													<a href="#top">
+														Residential Services
+													</a>
+												</li>
+												<li>
+													<a href="rocket_commercial.html">
+														Commercial Services
+													</a>
+												</li>
+												<li>
+													<a href="rocket_request_quote.html">
+														Request a Quote
+													</a>
+												</li>
+	
+											</ul>
 										</li>
 										
 										<li><!-- PORTFOLIO DROPDOWN-->
