--- a/Smarty/HTML_BS4/rocket_request_quote.html
+++ b/Smarty/HTML_BS4/rocket_request_quote.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rocket Elevators - House Tube</title>
+		<title>Rocket Elevators - Request a Quote Form</title>
 		<meta name="description" content="" />
 		<meta name="Author" content="Matthew Cote" />
 
@@ -138,9 +138,27 @@
 										</li>
 										
 										<li><!-- SERVICES 2-->
-											<a href="index-onepage-construction_altered2.html#services">
+											<a class="dropdown-toggle" href="#services">
 												SERVICES
 											</a>
+											<ul class="dropdown-menu">
+												<li>
+													<a href="rocket_residential.html">
+														Residential Services
+													</a>
+												</li>
+												<li>
+													<a href="rocket_commercial.html">
+														Commercial Services
+													</a>
+												</li>
+												<li>
+													<a href="#top">
+														Request a Quote
+													</a>
+												</li>
+	
+											</ul>
 										</li>
 										
 										<li><!-- PORTFOLIO DROPDOWN-->
