Moved some images files to proper folder, updated links where necessary, removed more unnecessary files, updated service section links, navbar for service section on all 16 pages.

--- a/Smarty/HTML_BS4/rocket_portfolio_7.html
+++ b/Smarty/HTML_BS4/rocket_portfolio_7.html
@@ -137,7 +137,7 @@
 										</li>
 										
 										<li><!-- SERVICES 2-->
-											<a class="dropdown-toggle" href="#services">
+											<a class="dropdown-toggle" href="index-onepage-construction_altered2.html#services">
 												SERVICES
 											</a>
 											<ul class="dropdown-menu">
