Got a start on the request a quote page. Basic div setups for user input on type selection in place

--- a/Smarty/HTML_BS4/index-onepage-construction_altered2.html
+++ b/Smarty/HTML_BS4/index-onepage-construction_altered2.html
@@ -345,7 +345,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="300"
 								style="z-index: 4;">
-									<img src="RocketElevatorAssets\AdobeStock_73868131.jpeg" alt="">
+									<img src="logoimages\main.jpg" alt="">
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
@@ -573,7 +573,7 @@
 
 					<div class="text-center">
 						<h2 class="fs-40 fw-300">Rocket Elevators ~ Est 1976</h2>
-						<a class="btn btn-default btn-lg" href="index-landing-3_altered.html">GET A QUOTE<i class="fa fa-angle-right"></i></a> 
+						<a class="btn btn-default btn-lg" href="rocket_request_quote.html">GET A QUOTE<i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
 						<a class="btn btn-default btn-lg" href="#contacts">CONTACT US<i class="fa fa-angle-right"></i></a>
 					</div>
