put images into asset folder, then deployed, then I fixed a ling for portfolio_7

--- a/rocket_portfolio_10.html
+++ b/rocket_portfolio_10.html
@@ -114,7 +114,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="image ofRocket elevator logo" />     
+								<img src="assets/images/r2.png" alt="image ofRocket elevator logo" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -304,7 +304,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_10.jpg" alt="image of a space elevator">
+								<img class="img-fluid" src="assets\images\portfolio_10.jpg" alt="image of a space elevator">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
