--- a/rocket_portfolio_2.html
+++ b/rocket_portfolio_2.html
@@ -114,7 +114,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="" />     
+								<img src="assets/images/r2.png" alt="" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -294,7 +294,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_2.jpg" alt="Images of an award">
+								<img class="img-fluid" src="assets\images\portfolio_2.jpg" alt="Images of an award">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
