--- a/rocket_portfolio_8.html
+++ b/rocket_portfolio_8.html
@@ -114,7 +114,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="" />     
+								<img src="assets/images/r2.png" alt="" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -304,7 +304,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_8.jpg" alt="image of condominium elevators">
+								<img class="img-fluid" src="assets\images\portfolio_8.jpg" alt="image of condominium elevators">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
