--- a/rocket_request_quote.html
+++ b/rocket_request_quote.html
@@ -101,7 +101,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="" />     
+								<img src="assets/images/r2.png" alt="" />     
 							</a>
 	
 							<div class="navbar-collapse collapse float-right nav-main-collapse submenu-dark">
