--- a/rocket_portfolio_12.html
+++ b/rocket_portfolio_12.html
@@ -114,7 +114,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="image of Rocket Elevators logo" />     
+								<img src="assets/images/r2.png" alt="image of Rocket Elevators logo" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -304,7 +304,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_12.jpg" alt="image of a woman in a tube elevator in a home">
+								<img class="img-fluid" src="assets\images\portfolio_12.jpg" alt="image of a woman in a tube elevator in a home">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
