--- a/rocket_portfolio_4.html
+++ b/rocket_portfolio_4.html
@@ -114,7 +114,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="Rocket Elevators logo" />     
+								<img src="assets/images/r2.png" alt="Rocket Elevators logo" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -304,7 +304,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_4.jpg" alt="Image of woman looking at Stainless Steel Elevator">
+								<img class="img-fluid" src="assets\images\portfolio_4.jpg" alt="Image of woman looking at Stainless Steel Elevator">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
