--- a/rocket_portfolio_7.html
+++ b/rocket_portfolio_7.html
@@ -113,7 +113,7 @@
 	
 							<!-- Logo -->
 							<a class="logo float-left" href="index.html">
-								<img src="logoimages/R2.png" alt="" />     
+								<img src="assets/images/r2.png" alt="image of Rocket Elevators logo" />     
 							</a>
 	
 							<!-- Top Nav 	
@@ -303,7 +303,7 @@
 					<!-- PORTFOLIO IMAGE -->
 					<div class="container">
 							<div>
-								<img class="img-fluid" src="logoimages\portfolio_7.jpg" alt="image of a elevator buttons with locks">
+								<img class="img-fluid" src="assets\images\portfolio_7.jpg" alt="image of a elevator buttons with locks">
 							</div>
 					</div>
 					<!-- /OWL SLIDER -->
