Removed unneccesary comments, fixed the slider a little, used prettier extension on the files. Still working on it

--- a/rocket_request_quote.html
+++ b/rocket_request_quote.html
@@ -81,16 +81,7 @@
 			<!-- HEADER SECTION - DONE -->
 			<div id="header" class="navbar-toggleable-md sticky header-md clearfix">
 
-				<!-- TOP NAV -- 
-								§ The navigation bar at the top of the page must be visible at all times, it must present the logo of Rocket Elevators and propose a menu 
-								that offers shortcuts to the various anchor points of the Home Page previously described:
-							   1 □ Home (Top of home page)
-							   2 □ Services
-							   3 □ Portfolio
-							   4 □ News
-							   5 □ Clients
-							   6 □ Contact
-							-->
+				<!-- TOP NAV -->
 					<header id="topNav">
 						<div class="container">
 	
