Fixed Slider, index done for now.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 		<script>window.addEventListener('wheel', { passive: false })</script>
 	</head>
 
-	
 	<body class="smoothscroll enable-animation">
 
 		<!-- SLIDE TOP // OPTIONAL - done for now -->
@@ -315,13 +314,13 @@
 								data-elementdelay="0"
 								data-endelementdelay="0"
 								data-endspeed="1000"
-								style="z-index: 2; color:#fff; font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
-									Rocket Elevators - Residential Buildings
+								style="z-index: 2; color:rgb(255, 1, 1); font-size:65px; line-height:85px; font-weight:bold; letter-spacing:0; text-shadow:none;">
+									Residential Buildings
 							</div>
 
-							<div class="tp-caption skewfromrightshort tp-resizeme"
+							<div class="tp-caption medium_bg_darkblue skewfromrightshort tp-resizeme"
 								data-x="50"
-								data-y="300" 
+								data-y="200" 
 								data-speed="500"
 								data-start="1000"
 								data-easing="easeInCirc"
@@ -330,7 +329,7 @@
 								data-elementdelay="0"
 								data-endelementdelay="0"
 								data-endspeed="1000"
-								style="z-index: 3; font-size:20px; color:#fff; font-weight:300; text-shadow:none;">
+								style="z-index: 3; font-size:20px; color:rgb(255, 1, 1); font-weight:bold; text-shadow:none;">
 									You cannot live without Rocket Residential Elevators
 							</div>
 
@@ -346,22 +345,7 @@
 								data-endelementdelay="0"
 								data-endspeed="1000"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-primary btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
-							</div>
-
-							<div class="tp-caption sfb tp-resizeme"
-								data-x="250"
-								data-y="410" 
-								data-speed="500"
-								data-start="1500"
-								data-easing="Power3.easeInOut"
-								data-splitin="none"
-								data-splitout="none"
-								data-elementdelay="0"
-								data-endelementdelay="0"
-								data-endspeed="500"
-								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-primary btn-lg" href="rocket_residential.html">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
@@ -385,9 +369,9 @@
 									Corporate Buildings Division
 							</div>
 
-							<div class="tp-caption largebluebg content_text_center skewfromleft tp-resizeme"
-								data-x="50"
-								data-y="550" 
+							<div class="tp-caption medium_bg_darkblue content_text_center skewfromleft tp-resizeme"
+								data-x="170"
+								data-y="150" 
 								data-speed="500"
 								data-start="2000"
 								data-easing="Power3.easeInOut"
@@ -396,10 +380,8 @@
 								data-elementdelay="0"
 								data-endelementdelay="0"
 								data-endspeed="600"
-
-								style="z-index: 3; font-size:30px; color:rgb(255, 0, 0); font-weight:bold; text-shadow:none;">
-									Elevate yourself over your subordinates in the corporate heirarchy <br>
-									With an elevator!
+								>
+									DESIGN - MANUFACTURING - INSTALLATION - SERVICE
 							</div>
 
 
@@ -416,7 +398,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-primary btn-lg" href="rocket_corporate.html">ELEVATE &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-primary btn-lg" href="rocket_corporate.html">Rocket Corporate &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
